--- a/CSharPers/CSharPers.csproj
+++ b/CSharPers/CSharPers.csproj
@@ -14,6 +14,8 @@
         <PackageReference Include="Microsoft.Build.Locator" Version="1.4.1"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+        <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
 
 </Project>
